@@ -1,3 +1,9 @@
+Fri Dec  6 00:02:25 1996  Tom Yu  <tlyu@mit.edu>
+
+	* loginpaths.h: Add catch-all entries for LPATH and RPATH in case
+	we run across something that we haven't hardcoded paths for
+	yet. [267]
+
 Thu Dec  5 21:58:28 1996  Tom Yu  <tlyu@mit.edu>
 
 	* login.M: v5srvtab -> krb5.keytab [279]
